// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AlertMessage> Structure renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "justifyContent": "center",
        "marginVertical": 10,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Object {
          "color": "#CCCCCC",
          "fontFamily": "Avenir-Book",
          "fontSize": 17,
          "fontWeight": "bold",
          "marginHorizontal": 10,
          "marginTop": 10,
          "textAlign": "center",
        }
      }
    >
      SAMPLE TEXT
    </Text>
  </View>
</View>
`;

exports[`<AlertMessage> Structure renders correctly if backgroundColor prop is set 1`] = `
<View
  style={
    Array [
      Object {
        "justifyContent": "center",
        "marginVertical": 10,
      },
      Object {
        "backgroundColor": "red",
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Object {
          "color": "#CCCCCC",
          "fontFamily": "Avenir-Book",
          "fontSize": 17,
          "fontWeight": "bold",
          "marginHorizontal": 10,
          "marginTop": 10,
          "textAlign": "center",
        }
      }
    >
      SAMPLE TEXT
    </Text>
  </View>
</View>
`;

exports[`<AlertMessage> Structure renders correctly if show is false 1`] = `""`;
